# robotis_op3_following_motion

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/: ini_pose.yaml
include/robotis_op3_following_motion/: op3_motion_follower.h
launch/: openpose_op3.launch  openpose_test.launch
src/: op3_following_motion_node.cpp  op3_motion_follower.cpp
